--- a/styles.css
+++ b/styles.css
@@ -3,34 +3,32 @@ h2 {
   font-style: italic;
 
   color: crimson;
-}
-p {
+  h1{
+
+  }
+p{
 
 }
-body {
-  padding-left: 100;
-  width: 79%;
-  height:40%;
-  overflow: hidden;
-  background-color:light-grey;
-  background-position: center;
-  background-image:/home/mwaura/Documents/Resort-Website/resort.jpg;
+body{
+  width: 10%;
+  position:static;
+  background-position:top;
+  background-image:/home/mwaura/Documents/Resort-Website/resort2.jpg;
   font-family: sans-serif;
 }
-.content-wrapper{
-  width: 50;
-  margin: inherit;
-}
-.content-wrapper img{
+
+/*.content-wrapper img{
    width: 100%;
-}
-.text-wrapper{
+
+}*/
+/*.text-wrapper{
   width: 100%;
   position: relative;
-  margin-top: -55%;
+  margin-top: -53%;
+  padding-right:0;
 }
 .text-wrapper h1{
   text-align: center;
-  color:light-blue;
+width: 10%;
 
-}
+}*/
